fix time-selector styling on firefox

--- a/app/component/summary/summary.scss
+++ b/app/component/summary/summary.scss
@@ -45,8 +45,8 @@
     }
 
     border-radius: $border-radius;
-    background: $primary-color;
-    padding: 6px 13px 6px 6px;
+    background: $primary-color !important;
+    padding: 6px 13px 6px 6px !important;
   }
   .select-wrapper {
     position:relative;
@@ -64,9 +64,9 @@
     height: 30px;
   }
 
-  .time {
+  .time-selector {
     @include font-book;
-    height: 30px;
+    height: 30px !important;
     text-align: left;
     font-family: $font-family !important;
     display: flex !important;
@@ -98,7 +98,7 @@
   padding: 0 20px;
 
   input[type="date"], input[type="time"], input[type="text"], select {
-    font-size: $font-size-normal;
+    font-size: $font-size-normal !important;
   }
 
   .right-offcanvas-toggle {
